@@ -4,6 +4,9 @@ freemed project changelog
 * Thu May 03 2001 fforest
    - added lib/module_calendar
    - added modules/admin.calendar 
+     (still needs work)
+   - added modules/view.calendar 
+     (still needs work but not as much as admin)
    - calendar code given to us by Chris Lea at Lucid.
 * Wed May 02 2001 fforest
   - modules/provider.db  changed all phone _x to 
